[package]
name = "tor_metrics_mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
log = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15"
chrono = "0.4"
serde_json = "1.0"
env_logger = "0.10"