[package]
name = "tor_metrics_mvp"
version = "0.1.0"
edition = "2021"
authors = ["Shivam vatshivam4988@gmail.com"]
description = "A crate to fetch, parse, and export Tor bridge pool assignment documents to PostgreSQL."
repository = "https://github.com/shivam37483/Tor-Metrics-mvp"
categories = ["network-programming", "database"]
keywords = ["tor", "metrics", "bridge", "postgresql", "rust"]

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
log = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
serde_json = "1.0"
env_logger = "0.10"
anyhow = "1.0"
chrono = "0.4"         
futures = "0.3"        
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
hex = "0.4"