[package]
name = "bridge_pool_assignments"
version = "1.0.0"
edition = "2021"
authors = ["Shivam vatshivam4988@gmail.com"]
description = "A crate to fetch, parse, and export Tor bridge pool assignment documents to PostgreSQL."
repository = "https://github.com/shivam37483/Tor-GSoC-25"
categories = ["network-programming", "database"]
keywords = ["tor", "metrics", "bridge", "postgresql", "rust"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive", "env"] }
chrono = "0.4"         
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"        
sha2 = "0.10"
hex = "0.4"